Fixes to button on mobile

--- a/assets/scss/objects/_home-intro.scss
+++ b/assets/scss/objects/_home-intro.scss
@@ -28,7 +28,3 @@
 		right: 6px;
 		}
 	}
-
-.home-intro a {
-
-}
